--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "alpinejs": "^3.15.4"
+        "alpinejs": "^3.15.4",
+        "babel-runtime": "^6.26.0",
+        "emoji-mart": "^2.11.2"
     }
 }
